cell overflow fix for certain os/browsers

--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  font-size: 0.8em;
+  font-size: 0.8vw;
 }
 
 .__react_component_tooltip {
